--- a/Templates/ejercicios/ejercicio-3_VcznDK1.html
+++ b/Templates/ejercicios/ejercicio-3_VcznDK1.html
@@ -22,24 +22,24 @@
 
 
 <ul id="sortable1" class="droptrue">
-  Arrasta las propiedades a las tablas que consideres correctas
-  <li class="ui-state-default">titulo</li>
-  <li class="ui-state-default">genero</li>
-  <li class="ui-state-default">consola</li>
-  <li class="ui-state-default">desarrollador</li>
-  <li class="ui-state-default">precio</li>
-  <li class="ui-state-default">fecha de lanzamiento</li>
-  <li class="ui-state-default">nombre</li>
-  <li class="ui-state-default">telefono</li>
-  <li class="ui-state-default">direccion</li>
-  <li class="ui-state-default">clave</li>
-  <li class="ui-state-default">nombre</li>
-  <li class="ui-state-default">sucursal</li>
-  <li class="ui-state-default">salario</li>
-  <li class="ui-state-default">nombre</li>
-  <li class="ui-state-default">direccion</li>
-  <li class="ui-state-default">correo electronico</li>
-  <li class="ui-state-default">telefono</li>
+  Atributos
+  <li class="ui-state-default">Titulo</li>
+  <li class="ui-state-default">Genero</li>
+  <li class="ui-state-default">Consola</li>
+  <li class="ui-state-default">Desarrollador</li>
+  <li class="ui-state-default">Precio</li>
+  <li class="ui-state-default">Fecha de lanzamiento</li>
+  <li class="ui-state-default">Nombre</li>
+  <li class="ui-state-default">Telefono</li>
+  <li class="ui-state-default">Direccion</li>
+  <li class="ui-state-default">Clave</li>
+  <li class="ui-state-default">Nombre</li>
+  <li class="ui-state-default">Sucursal</li>
+  <li class="ui-state-default">Salario</li>
+  <li class="ui-state-default">Nombre</li>
+  <li class="ui-state-default">Direccion</li>
+  <li class="ui-state-default">Correo electronico</li>
+  <li class="ui-state-default">Telefono</li>
 </ul>
 
 <ul id="sortable2" class="droptrue">
