--- a/Templates/ejercicios/ejercicio-3_VcznDK1.html
+++ b/Templates/ejercicios/ejercicio-3_VcznDK1.html
@@ -1,25 +1,24 @@
-
-
 {% extends 'actividadesEjercicios.html' %}
 
 {% block ejercicio %}
 <style>
     #sortable1, #sortable2, #sortable3, #sortable4, #sortable5 { list-style-type: none; margin: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 143px;}
     #sortable1 li, #sortable2 li, #sortable3 li, #sortable4 li, #sortable5 li { margin: 5px; padding: 5px; font-size: 1.2em; width: 120px; }
-  </style>
+</style>
   
-  <script>
-    $( function() {
+<script>
+  $(function(){
 
-      $( "ul.droptrue" ).sortable({
-        connectWith: "ul"
-      });
-   
-      $( "#sortable1, #sortable2, #sortable3, #sortable4, #sortable5").disableSelection();
-    } );
-  </script>
+    $( "ul.droptrue").sortable({
+      connectWith: "ul"
+    });
+    $("#sortable1, #sortable2, #sortable3, #sortable4, #sortable5").disableSelection();
+  });
 
-
+  window.onload=function(){
+    document.getElementById("btn-ejercicio-2-1").addEventListener("click", enviarEjercicio2_3);
+  }
+</script>
 
 <ul id="sortable1" class="droptrue">
   Atributos
@@ -45,7 +44,6 @@
 <ul id="sortable2" class="droptrue">
   Videojuegos
   <li class="ui-state-default ui-state-disabled">idVideojuego</li>
-
 </ul>
 
 <ul id="sortable3" class="droptrue">
@@ -63,5 +61,9 @@
   <li class="ui-state-default ui-state-disabled">idCliente</li>
 </ul>
  
-<!-- <br style="clear:both"> -->
+<br style="clear:both">
+
+<div class="container">
+  <button id="btn-ejercicio-2-1">Enviar</button>
+</div>
 {% endblock %}
