--- a/Templates/ejercicios/ejercicio-3_VcznDK1.html
+++ b/Templates/ejercicios/ejercicio-3_VcznDK1.html
@@ -2,8 +2,21 @@
 
 {% block ejercicio %}
 <style>
-    #sortable1, #sortable2, #sortable3, #sortable4, #sortable5 { list-style-type: none; margin: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 143px;}
-    #sortable1 li, #sortable2 li, #sortable3 li, #sortable4 li, #sortable5 li { margin: 5px; padding: 5px; font-size: 1.2em; width: 120px; }
+    #sortable1, #sortable2, #sortable3, #sortable4, #sortable5{
+      list-style-type: none;
+      margin: 0;
+      float: left;
+      margin-right: 10px;
+      background: #eee;
+      padding: 5px;
+      width: 143px;
+      }
+    #sortable1 li, #sortable2 li, #sortable3 li, #sortable4 li, #sortable5 li{
+      margin: 5px;
+      padding: 5px;
+      font-size: 1.2em;
+      width: 120px;
+      }
 </style>
   
 <script>
@@ -16,7 +29,7 @@
   });
 
   window.onload=function(){
-    document.getElementById("btn-ejercicio-2-1").addEventListener("click", enviarEjercicio2_3);
+    document.getElementById("btn-ejercicio-2-1").addEventListener("click", enviarEjercicio2_1);
   }
 </script>
 
