--- a/Templates/ejercicios/ejercicio1_N2mh6h9.html
+++ b/Templates/ejercicios/ejercicio1_N2mh6h9.html
@@ -1,7 +1,7 @@
 {% extends 'actividadesEjercicios.html' %}
 
 {% block ejercicio %}
-    <table id="tabla-{{idEjercicio}}">
+    <table id="tabla-{{idEjercicio}}" contenteditable="true">
         <tr>
             <th>Nombre SMBD 1</th>
             <th>Nombre SMBD 2</th>
