*fix, feat* Fixed models, partial Send ejercicios
Send ejercicios 3-1, partial send ejercicios 5-1 & 7-1. Also, models has been changed sinced we dont need preguntas nor opcionesRespuestas, due the change of not being tests

--- a/Templates/ejercicios/ejercicio-4.html
+++ b/Templates/ejercicios/ejercicio-4.html
@@ -2,7 +2,17 @@
 
 {% block ejercicio %}
 
-    <div contenteditable="true" id="code">
-        -- Escribe aqui tus consultas SQL
-    </div>
+<script>
+    window.onload=function(){
+    document.getElementById("btn-ejercicio-5-1").addEventListener("click", enviarEjercicio5_1);
+  }
+</script>
+
+<div contenteditable="true" id="query">
+    Escribe aqui tus consultas SQL
+</div>
+
+<div class="container">
+    <button id="btn-ejercicio-5-1">Enviar</button>
+</div>
 {% endblock %}
