--- a/Templates/ejercicios/ejercicio-8.html
+++ b/Templates/ejercicios/ejercicio-8.html
@@ -1,8 +1,16 @@
 {% extends 'actividadesEjercicios.html' %}
-
 {% block ejercicio %}
+<script>
+    window.onload=function(){
+    document.getElementById("btn-ejercicio-7-1").addEventListener("click", enviarEjercicio7_1);
+  }
+</script>
 
-    <div contenteditable="true" id="code">
-        -- Escribe aqui tus consultas SQL
-    </div>
+<div contenteditable="true" id="query">
+    -- Escribe aqui tus consultas SQL
+</div>
+
+<div class="container">
+    <button id="btn-ejercicio-7-1">Enviar</button>
+</div>
 {% endblock %}
