--- a/Templates/cambiar_contraseña.html
+++ b/Templates/cambiar_contraseña.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% block content %}
 <div class="container">
+
+    {% if first_login %}
+        <p>Te recomendamos cambiar tu contraseña la primera vez que inicias sesion</p>
+        <p>Después de esto, podras encontrar esta opcion en tu perfil</p>
+    {% endif %}
+
     <form method="POST">
         {% csrf_token %}
 
@@ -26,6 +32,9 @@
           </table>
         <button type="submit">Cambiar</button>
     </form>
+    <a href="{% url 'perfil' %}">
+        <button>Regresar a mi perfil</button>
+    </a>
 </div>
 
 {% endblock %}
