*feat* SQL saved in database
The SQL code is now available at db, so users can see their last answers at this kind of ejercicios

--- a/Templates/ejercicios/ejercicio-4.html
+++ b/Templates/ejercicios/ejercicio-4.html
@@ -9,7 +9,13 @@
 </script>
 
 <div contenteditable="true" id="query">
-    Escribe aqui tus consultas SQL
+{% if respuestas %}
+    {% for respuesta in respuestas %}
+        {{respuesta.respuesta}}
+    {% endfor %}
+{% else %}
+    Escribe aqui tu consulta SQL
+{% endif %}
 </div>
 
 <div class="container">
