--- a/Templates/ejercicios/ejercicio-8.html
+++ b/Templates/ejercicios/ejercicio-8.html
@@ -7,8 +7,14 @@
 </script>
 
 <div contenteditable="true" id="query">
-    -- Escribe aqui tus consultas SQL
-</div>
+    {% if respuestas %}
+        {% for respuesta in respuestas %}
+            {{respuesta.respuesta}}
+        {% endfor %}
+    {% else %}
+        Escribe aqui tu consulta SQL
+    {% endif %}
+    </div>
 
 <div class="container">
     <button id="btn-ejercicio-7-1">Enviar</button>
