--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -6,8 +6,8 @@
         <div id="compilador-top">
             <p id="titulo">Compilador <b>Oracle</b></p>
             <div id="buttons">
-                <button id="borrar" onclick="limpiar()">Clear</button>
-                <button id="play" onclick="compile()"> Play</button>
+                <button id="borrar" onclick="limpiar()">Borrar</button>
+                <button id="play" onclick="compile()"> Ejecutar</button>
             </div>
         </div>
         <div id="compilador-bottom">
