--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -17,8 +17,8 @@
         <div class="container">
             <div class="row">
                 <nav class="nav-menu">
-                    <p id="tituloEjercicio" class="titulo-data">Data</p>
-                    <p id="tituloEjercicio" class="titulo-base">Bass</p>
+                    <p id="tituloEjercicio1" class="titulo-data">Data</p>
+                    <p id="tituloEjercicio2" class="titulo-base">Bass</p>
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
                         <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
