*fix* Set password & Look ejercicio31 answers
Changed the view in change password (now it redirect you to dashboard if succeed). Also, waiting for aproval of table in Template for ejercicio31 tables

--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -2,6 +2,16 @@
 {% load static %}
 {% block content %}
 
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li>
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+{% endif %}
+
 <div id="mid-container">
         <div id="img-dashboard-container">
             <img src="{% static 'img/code.png' %}" alt="" class="img">
