*fix, feat* Various
Calificacion only in ejercicio Template. Alert before sending ejercicio. MAESTRO: change state ejercicio, see califications and update'em and see the date of the last update of the try

--- a/Templates/maestro/tabla31.html
+++ b/Templates/maestro/tabla31.html
@@ -1,4 +1,4 @@
-{% extends 'respuestas31.html' %}
+{% extends 'maestro/respuestas31.html' %}
 {% block content %}
 
 <style>
@@ -25,23 +25,7 @@
     </form>
 </div>
 
-
-<p>Primera opcion</p>
-<table>
-    {% for key, value in respuesta.items %} 
-    <tr>
-        <th>{{key}}</th>
-    </tr>
-
-    <tr>
-        {% for val in value %}
-            <td>{{val}}</td>
-        {% endfor %}
-    </tr>
-    {% endfor %}
-</table>
-
-<p>Segunda opcion</p>
+Ejercicio #1.1. 
 
 <table>
     {% for key, value in respuesta.items %} 
